ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/acme-challenge-type: dns01
    certmanager.k8s.io/acme-dns01-provider: cloudflare
  labels:
    app: ldn-status-api
  name: ldn-status-api-ingress
  namespace: learndevopsnow
spec:
  ingressClassName: nginx
  rules:
    - host: api-status.learndevopsnow-mm.blog
      http:
        paths:
          - backend:
              service:
                name: ldn-status-api
                port:
                  number: 8000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - api-status.learndevopsnow-mm.blog
      secretName: tls-secret-ldn-mm
